# pygine

./: .gitignore  LICENSE  README.md  docs-requirements.txt  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
docs/: gen_ref_pages.py  index.md  quickstart.md
docs/examples/: index.md
examples/: example_all_animations.py  example_animations.py  example_background_image.py  example_basic_sprite.py  example_camera_system.py  example_collision_detection.py  example_explosion_game.py  example_keyboard_input.py  example_mirroring.py  example_mouse_tracking.py  example_particle_effects.py  example_physics_simulation.py  example_platformer_game.py  example_rotation.py  example_rounded_ui.py  example_scaling.py  example_scene_management.py  example_screen_shake.py  example_simple_game.py  example_spritesheet_utilities.py  example_text_input.py  example_user_interface.py  test_10_effects.py  test_11_camera.py  test_12_physics.py  test_13_scenes.py  test_1_basic_sprite.py  test_2_animations.py  test_3_scale.py  test_4_rotation.py  test_5_mirror.py  test_6_mouse_rotation.py  test_7_movement.py  test_8_ui.py  test_9_collision.py  test_all_animations.py  test_game_1.py  test_game_2.py  test_spritesheet_tools.py
pygine/: __init__.py  animation.py  camera.py  effects.py  game.py  physics.py  scene.py  sprite.py  spritesheet_tools.py  ui.py  utils.py
